[package]
name = "subsample_fastq"
version = "0.1.0"
authors = ["ftabaro <francesco.tabaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
flate2 = "1.0"

[[bin]]
name = "subsample_fastq"
path = "main.rs"
